# medicare-raf-prototypes

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Medicare_Analytics_Pipeline.pptx  README.md  app.py  docker-compose.yml  fix_psm.py  pyproject.toml  requirements.txt  run_pipeline.py
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: data_dictionary.md
mlruns/0/53580ee7aa2d4d5f8b3f138b53f80de2/artifacts/: feature_importance.json
mlruns/0/models/m-060f0a075b0c4098973e2456184e7603/artifacts/: MLmodel  model.ubj
mlruns/0/models/m-5becd5b740204d3faa072fa13dab33b2/artifacts/: MLmodel
mlruns/0/models/m-61977f11522f49329630c64b7df215a6/artifacts/: MLmodel  conda.yaml  model.ubj
mlruns/0/models/m-7202efc3aa3e4b7dbc091968539add06/artifacts/: MLmodel  python_env.yaml
mlruns/0/models/m-842a9f92900e42c7b1e6cf4dc000e8f4/artifacts/: MLmodel
mlruns/0/models/m-8b11718657144ce88ffd88a27eb9ffcc/artifacts/: MLmodel  model.ubj
mlruns/0/models/m-afb69138b5cb4e9eafbae37f0c284a9e/artifacts/: MLmodel
mlruns/0/models/m-b25b275d996a4c1c95c17b6930828e0a/artifacts/: MLmodel
mlruns/0/models/m-d2a3010c6e774093889d595d7db4a66e/artifacts/: MLmodel
mlruns/0/models/m-dad6c28f0e95475285f43505ff873c15/artifacts/: MLmodel
notebooks/: 01_hcc_raf_deep_dive.ipynb  02_risk_stratification.ipynb  03_shared_savings_attribution.ipynb
notebooks/mlruns/0/0052f5d5919f45a187b6e11dc4ef6748/artifacts/: feature_importance.json
notebooks/mlruns/0/models/m-49bb996d469f4b2ba4eb9cd27dff247b/artifacts/: MLmodel  model.ubj
notebooks/mlruns/0/models/m-8902ac188eab48f9b1060be7f58cb96a/artifacts/: MLmodel  conda.yaml  python_env.yaml
src/: __init__.py  causal_attribution.py  data_generator.py  hcc_mapper.py  raf_calculator.py  risk_stratification.py
src/medicare_raf/: __init__.py
src/medicare_raf/data/: __init__.py  data_generator.py
src/medicare_raf/inference/: __init__.py  causal_attribution.py
src/medicare_raf/modeling/: __init__.py  hcc_mapper.py  raf_calculator.py  risk_stratification.py
src/medicare_raf/utils/: __init__.py
tests/: __init__.py  test_causal_inference.py  test_data_validation.py  test_hcc_raf.py
